--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bgryks/react-multiselect",
-  "version": "0.0.2",
+  "version": "0.0.8",
   "author": "Bugra Yuksel",
   "description": "Multiselect component for reactjs",
   "scripts": {
@@ -19,24 +19,26 @@
   },
   "homepage": "https://github.com/bgryks18/react-multiselect#readme",
   "license": "ISC",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/react": "^18.0.25",
+    "node-sass": "^7.0.3",
     "postcss": "^8.4.18",
     "react": "^18.2.0",
     "react-icons": "^4.6.0",
     "rollup": "^2.60.0",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-postcss": "^4.0.2",
+    "sass": "^1.56.0",
     "tslib": "^2.4.1",
     "typescript": "^4.4.4"
-  },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "files": [
-    "dist"
-  ],
-  "types": "dist/index.d.ts"
+  }
 }
