--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "dist"
   ],
   "types": "dist/index.d.ts",
+  "peerDependencies": {
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
@@ -40,11 +44,8 @@
     "@storybook/react-vite": "^7.0.22",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/react": "^18.0.25",
-    "node-sass": "^7.0.3",
     "postcss": "^8.4.18",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "rollup": "^2.60.0",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-postcss": "^4.0.2",
@@ -52,6 +53,8 @@
     "storybook": "^7.0.22",
     "tslib": "^2.4.1",
     "typescript": "^4.4.4",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
