--- a/package.json
+++ b/package.json
@@ -46,15 +46,16 @@
     "@types/react": "^18.0.25",
     "postcss": "^8.4.18",
     "prop-types": "^15.8.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "rollup": "^2.60.0",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-postcss": "^4.0.2",
-    "sass": "^1.56.0",
+    "sass": "^1.94.2",
     "storybook": "^7.0.22",
+    "tailwind": "^4.0.0",
     "tslib": "^2.4.1",
     "typescript": "^4.4.4",
-    "vite": "^4.3.9",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "vite": "^4.3.9"
   }
 }
